[package]
name = "wag"
version = "0.1.0"
edition = "2021"
description = "Windows Artefact Generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[build-dependencies]
winres = "0"

[dependencies]
windows = { version = "0.52", features = [
  "Win32_System_Pipes",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_System_IO",
  "Win32_System_Services",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0"
regex_generate = "0"
widestring = "1"
