# SPDX-FileCopyrightText: 2023 The WAG development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "wag"
version = "1.0.0"
edition = "2021"
description = "Windows Artefact Generator"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[build-dependencies]
winres = "0"

[dependencies]
base64 = { version = "0.22.1" }
windows = { version = "0.52", features = [
  "Win32_System_Pipes",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_System_IO",
  "Win32_System_Services",
] }
clap = { version = "4", features = ["derive"] }
rand = "0"
regex_generate = "0"
widestring = "1"
sysinfo = "0.30.5"
