# SPDX-FileCopyrightText: 2023 The WAG development team
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "windows-artifacts-generator"
version = "1.0.0"
edition = "2021"
description = "Generate malware artifacts for detection tests"
documentation = "https://frack113.github.io/WAG/"
repository = "https://github.com/frack113/WAG/"
license = "GPL-3.0-or-later"
keywords = [
  "malware-detection",
  "blueteam",
  "windows",
  "artifacts-generation",
  "rust",
]
categories = ["command-line-utilities"]

[[bin]]
name = "wag"
path = "./src/main.rs"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = false
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false


[build-dependencies]
winres = "0"

[dependencies]
base64 = { version = "0.22.1" }
windows = { version = "0.58", features = [
  "Win32_System_Pipes",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_System_IO",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Memory",
] }
clap = { version = "4", features = ["derive"] }
rand = "0"
regex_generate = "0"
sysinfo = "0.30"
